Change the hero image div to a section. Add the code institute form-dump back to the action. Make the NFT logo in the about section smaller. Add max-width to the body to stop the content from spreading on very large screens, also use margin left/right auto to center it on the document. Remove position absolute from the sign up form and add margin left/right auto.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@ html {
 
 body {
     font-family: 'Alegreya', serif;
+    max-width: 2000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -148,8 +151,8 @@ a:active {
 
 .about-box img {
     border-radius: 300px;
-    max-width: 250px;
-    margin-left: 55px;
+    max-width: 210px;
+    margin-left: 78px;
     margin-top: 15px;
 }
 
@@ -213,7 +216,8 @@ div.desc {
     margin: 150px 10% 0 0;
     /*background-image: url('/assets/images/cube-logo-vighnesh-dudani-ZQSs0YZUNfA-unsplash.jpg');*/
     max-width: 400px;
-    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
     left: 35%;
     padding: 30px;
     color: black;
